# fpl-copilot

./: .gitignore  Dockerfile  README.md  agent.py  create_table.py  github_actions_key  github_actions_key.pub  load_players.py  main.py  optimize_squad.py  predict_naive.py  pyproject.toml  tools.py
.github/workflows/: deploy.yml
static/: index.html
