[project]
name = "fpl-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.116.0",
    "fastapi>=0.139.0",
    "highspy>=1.15.1",
    "psycopg2-binary>=2.9.12",
    "pulp>=3.3.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "uvicorn[standard]>=0.50.0",
]
